// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`categorical cartesian per-field overrides draws a line overlay over categorical bars 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-38.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-38.666667}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-61.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-61.866667}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-232}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-232}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-154.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-154.666667}}],"fillRule":"nonzero"}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":75.760002,"y":216.800003}},
{"type":"lineTo","props":{"x":168.399994,"y":162.666672}},
{"type":"lineTo","props":{"x":261.040009,"y":85.333336}},
{"type":"lineTo","props":{"x":353.679993,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":75.760002,"y":216.800003}},{"type":"lineTo","props":{"x":168.399994,"y":162.666672}},{"type":"lineTo","props":{"x":261.040009,"y":85.333336}},{"type":"lineTo","props":{"x":353.679993,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":75.760002,"f":216.800003}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":168.399994,"f":162.666672}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":261.040009,"f":85.333336}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":353.679993,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}}
]
`;

exports[`categorical cartesian per-field overrides draws a scatter overlay over categorical bars 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-38.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-38.666667}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-61.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-61.866667}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-232}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-232}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-154.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-154.666667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":75.76,"f":216.8}},
{"type":"globalAlpha","props":{"value":0.8}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"globalAlpha","props":{"value":0.8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":168.4,"f":162.666667}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":261.04,"f":85.333333}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":353.68,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"restore","props":{}}
]
`;

exports[`categorical cartesian per-field overrides draws bar, line, scatter and effectScatter series together 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-38.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-38.666667}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-61.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-61.866667}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-232}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-232}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-154.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-154.666667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":75.76,"f":216.8}},
{"type":"globalAlpha","props":{"value":0.8}},
{"type":"fillStyle","props":{"value":"#b877d9"}},
{"type":"globalAlpha","props":{"value":0.8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":168.4,"f":162.666667}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":261.04,"f":85.333333}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":353.68,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":75.76,"f":100.8}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#e0b400"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":168.4,"f":193.6}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":261.04,"f":131.733333}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":353.68,"f":170.4}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":75.760002,"y":147.199997}},
{"type":"lineTo","props":{"x":168.399994,"y":116.26667}},
{"type":"lineTo","props":{"x":261.040009,"y":54.400002}},
{"type":"lineTo","props":{"x":353.679993,"y":38.933334}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":75.760002,"y":147.199997}},{"type":"lineTo","props":{"x":168.399994,"y":116.26667}},{"type":"lineTo","props":{"x":261.040009,"y":54.400002}},{"type":"lineTo","props":{"x":353.679993,"y":38.933334}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":75.760002,"f":147.199997}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":168.399994,"f":116.26667}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":261.040009,"f":54.400002}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":353.679993,"f":38.933334}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}}
]
`;

exports[`categorical cartesian per-field overrides joins series by category label across frames with different orders and subsets 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":40.92736,"y":240,"width":51.13728,"height":-29}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":40.92736,"y":240,"width":51.13728,"height":-29}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":115.03936,"y":240,"width":51.13728,"height":-46.4}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":115.03936,"y":240,"width":51.13728,"height":-46.4}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":189.15136,"y":240,"width":51.13728,"height":-174}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":189.15136,"y":240,"width":51.13728,"height":-174}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":263.26336,"y":240,"width":51.13728,"height":-116}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":263.26336,"y":240,"width":51.13728,"height":-116}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":214.72,"f":124}},
{"type":"globalAlpha","props":{"value":0.8}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"globalAlpha","props":{"value":0.8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":288.832,"f":66}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":5,"b":0,"c":0,"d":5,"e":362.944,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"restore","props":{}}
]
`;

exports[`categorical cartesian per-field overrides stacks bar fields while an overridden line field stays out of the stack 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-46.4}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":43.7992,"y":240,"width":63.9216,"height":-46.4}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-18.56}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":136.4392,"y":240,"width":63.9216,"height":-18.56}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-69.6}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":229.0792,"y":240,"width":63.9216,"height":-69.6}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-4.64}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":321.7192,"y":240,"width":63.9216,"height":-4.64}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":43.7992,"y":193.6,"width":63.9216,"height":-106.72}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":43.7992,"y":193.6,"width":63.9216,"height":-106.72}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":136.4392,"y":221.44,"width":63.9216,"height":-46.4}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":136.4392,"y":221.44,"width":63.9216,"height":-46.4}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":229.0792,"y":170.4,"width":63.9216,"height":-139.2}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":229.0792,"y":170.4,"width":63.9216,"height":-139.2}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":321.7192,"y":235.36,"width":63.9216,"height":-51.04}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":321.7192,"y":235.36,"width":63.9216,"height":-51.04}}],"fillRule":"nonzero"}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":75.760002,"y":54.400002}},
{"type":"lineTo","props":{"x":168.399994,"y":156.479996}},
{"type":"lineTo","props":{"x":261.040009,"y":8}},
{"type":"lineTo","props":{"x":353.679993,"y":165.759995}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":75.760002,"y":54.400002}},{"type":"lineTo","props":{"x":168.399994,"y":156.479996}},{"type":"lineTo","props":{"x":261.040009,"y":8}},{"type":"lineTo","props":{"x":353.679993,"y":165.759995}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":75.760002,"f":54.400002}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":168.399994,"f":156.479996}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":261.040009,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":353.679993,"f":165.759995}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}}
]
`;
